kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      serviceAccountName: keycloak
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.0.0
        args:
        - start
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        resources:
          requests:
            memory: 512Mi
            cpu: 125m
          limits:
            memory: 1024Mi
            cpu: 512m
