kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  selector:
    app.kubernetes.io/name: keycloak
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
