kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/keycloak/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-http
spec:
  parentRefs:
  - name: default
    namespace: kube-system
    sectionName: http
  hostnames: [auth.tk831.net]
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-https
spec:
  parentRefs:
  - name: default
    namespace: kube-system
    sectionName: https
  hostnames: [auth.tk831.net]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-http
      port: 80
